adding bilby to sofwtare stack

--- a/setup/check_setup.ipynb
+++ b/setup/check_setup.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,20 +34,18 @@
     }
    ],
    "source": [
-    "# -- If needed: Install some packages right now.\n",
-    "\n",
+    "# -- Install python modules for Open Data Workshop 2019\n",
     "print(\"Downloading software requirements ...\")\n",
     "!wget -q https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt -O requirements.txt\n",
     "\n",
     "print(\"Installing software, this could take a few minutes ...\")\n",
     "!pip install -q -r ./requirements.txt\n",
-    "\n",
     "print(\"Software installation complete\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,6 +64,7 @@
     "import gwpy\n",
     "import astropy\n",
     "import pycbc\n",
+    "import bilby\n",
     "\n",
     "print(\"The software is ready!\")"
    ]
