align tuto header

--- a/Day_2/Tuto 2.4 Parameter estimation for compact object mergers.ipynb
+++ b/Day_2/Tuto 2.4 Parameter estimation for compact object mergers.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Installation"
+    "## Installation (execute only if running on a cloud platform!)"
    ]
   },
   {
@@ -38,6 +38,13 @@
    "source": [
     "! wget --output-document=requirements.txt 'https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt'\n",
     "! pip install -r ./requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialization"
    ]
   },
   {
