--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -14,7 +14,16 @@
     "###  Paris, April 8-10 2019 \n",
     "*[Université Paris Diderot, France](https://www.univ-paris-diderot.fr/)*\n",
     "\n",
-    "                                                                            Tutorial 2.6"
+    "#### Tutorial 2.6: skymap and source localization of gravitational-wave events\n",
+    "\n",
+    "In this tutorial we will learn how: \n",
+    "\n",
+    "    1) to visualize over the sky the gravitational-wave localization \n",
+    "    2) to get information from the image's header\n",
+    "    3) to identify the maximum probability pixel \n",
+    "    4) to create the confidence levels and query the galaxy catalog(s)\n",
+    "    \n",
+    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/day_2/Tuto%202.6%20Working_with_gravitational_wave_skymaps.ipynb)"
    ]
   },
   {
@@ -24,42 +33,7 @@
     "id": "XoXK5903A6nW"
    },
    "source": [
-    " \n",
-    "#  Electromagnetic follow-up of gravitational-wave events\n",
-    "\n",
-    "\n",
-    "In this tutorial we will learn how: \n",
-    "\n",
-    "    1) to visualize over the sky the gravitational-wave localization \n",
-    "    \n",
-    "    2) to get information from the image's header\n",
-    "    \n",
-    "    3) to identify the maximum probability pixel \n",
-    "    \n",
-    "    4) to create the confidence levels and query the galaxy catalog(s)\n",
-    " \n",
-    "##  Installation and initialization\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/day_2/Tuto%202.6%20Working_with_gravitational_wave_skymaps.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "fr1pbfjzA6nY"
-   },
-   "outputs": [],
-   "source": [
-    "from IPython.display import display, Math, Latex"
+    "##  Installation  (execute only if running on a cloud platform!)"
    ]
   },
   {
@@ -79,6 +53,27 @@
    "source": [
     "! wget --output-document=requirements.txt 'https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt'\n",
     "! pip install -r ./requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "collapsed": true,
+    "id": "fr1pbfjzA6nY"
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import display, Math, Latex"
    ]
   },
   {
