add note runtime restart

--- a/Day_2/Tuto 2.2 MatchedFiltering.ipynb
+++ b/Day_2/Tuto 2.2 MatchedFiltering.ipynb
@@ -42,6 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Important:** With Google Colab, you may need to restart the runtime after running the cell above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Looking for a specific signal in the data\n",
     "\n",
     "If you know what signal you are looking for in the data, then matched filtering is known to be the optimal method in Gaussian noise to extract the siganl. Even when the parameters of the signal are unkown,  one can test for each set of parameters one is interesting in finding."
