add note runtime restart

--- a/Day_2/Tuto 2.3 Significance NoiseRejection.ipynb
+++ b/Day_2/Tuto 2.3 Significance NoiseRejection.ipynb
@@ -43,6 +43,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Important:** With Google Colab, you may need to restart the runtime after running the cell above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Significance of Virgo SNR peak of GW170814 ###\n",
     "\n",
     "We will estimate the significance of signal-to-noise peak observed in the Virgo instrument near in time to the large peaks observed in the LIGO-Hanford and LIGO-Livingston observatories.\n",
