--- a/Day_2/Tuto 2.4 Parameter estimation for compact object mergers.ipynb
+++ b/Day_2/Tuto 2.4 Parameter estimation for compact object mergers.ipynb
@@ -42,6 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Important:** With Google Colab, you may need to restart the runtime after running the cell above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Initialization"
    ]
   },
