--- a/Day_2/Tuto 2.4 Parameter estimation for compact object mergers.ipynb
+++ b/Day_2/Tuto 2.4 Parameter estimation for compact object mergers.ipynb
@@ -61,7 +61,8 @@
    "outputs": [],
    "source": [
     "from __future__ import division, print_function\n",
-    "import bilby"
+    "import bilby\n",
+    "import gwpy"
    ]
   },
   {
