--- a/gwpy/0 - GWOSC python.ipynb
+++ b/gwpy/0 - GWOSC python.ipynb
@@ -4,46 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query the OpenScience datasets using `gwosc`\n",
+    "# Discovering open data from GW observatories\n",
     "\n",
-    "This pre-tutorial describes how you can use the [`gwosc`](//gwosc.readthedocs.io) python module to search for GW open data information.\n",
-    "\n",
-    "First, lets install it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting gwosc\n",
-      "/Users/duncan/git/odw-2018/venv/lib/python2.7/site-packages/pip/_vendor/msgpack/fallback.py:222: PendingDeprecationWarning: encoding is deprecated, Use raw=False instead.\n",
-      "  PendingDeprecationWarning)\n",
-      "  Using cached https://files.pythonhosted.org/packages/74/f6/1c7ad8effc4f770000b4779e8462d0a1932678d9c2b78c5c81b61b8eda66/gwosc-0.3.3-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: six>=1.9.0 in /Users/duncan/git/odw-2018/venv/lib/python2.7/site-packages (from gwosc) (1.11.0)\n",
-      "Installing collected packages: gwosc\n",
-      "Successfully installed gwosc-0.3.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install \"gwosc\""
+    "This notebook describes how to discover what data are available from the [Gravitational-Wave Open Science Center (GWOSC)](https://www.gw-openscience.org)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Querying for event information\n",
-    "\n",
-    "The `gwosc.datasets` module provides tools to search for datasets, including filtering on GPS times.\n",
-    "\n",
-    "For example, we can search for what event datasets are available:"
+    "## Software installation\n",
+    "First, we need to install the software, which we do so using the `requirements.txt` file provided for this workshop:"
    ]
   },
   {
@@ -55,13 +26,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'GW150914', u'GW151226', u'GW170104', u'GW170608', u'GW170814', u'GW170817', u'LVT151012']\n"
+      "/Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages/pip/_vendor/msgpack/fallback.py:222: PendingDeprecationWarning: encoding is deprecated, Use raw=False instead.\n",
+      "  PendingDeprecationWarning)\n",
+      "\u001b[31mCannot uninstall 'lalsuite'. It is a distutils installed project and thus we cannot accurately determine which files belong to it which would lead to only a partial uninstall.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "!curl --silent --output requirements.txt https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt\n",
+    "!{sys.executable} -m pip install -q -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In general, we could install just what we need for this tutorial using `pip` as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: gwosc in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (0.4.3)\r\n",
+      "Requirement already satisfied: six>=1.9.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwosc) (1.12.0)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!{sys.executable} -m pip install \"gwosc\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">Here we use <code>{sys.executable} -m pip install</code>, which is just a fancy way of saying <code>pip install ...</code></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Querying for event information\n",
+    "\n",
+    "The gwosc.datasets module provides tools to search for datasets, including filtering on GPS times.\n",
+    "\n",
+    "For example, we can search for what event datasets are available:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['151008', '151012A', '151116', '161202', '161217', '170208', '170219', '170405', '170412', '170423', '170616', '170630', '170705', '170720', 'GW150914', 'GW151012', 'GW151226', 'GW170104', 'GW170608', 'GW170729', 'GW170809', 'GW170814', 'GW170817', 'GW170818', 'GW170823']\n"
      ]
     }
    ],
    "source": [
     "from gwosc.datasets import find_datasets\n",
-    "events = find_datasets(type='event')\n",
+    "events = find_datasets(type=\"event\")\n",
     "print(events)"
    ]
   },
@@ -69,26 +104,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see the list of confirmed detections (those prefixed as 'GW') and one likely detection (prefixed as 'LVT'). `find_datasets` also accepts a `detector` keyword to return only those datasets that include data for that detector."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can query for the GPS time of a given event:"
+    "As of O2, there are 25 event datasets available; 11 of those are confident detections (with the `'GW'` prefix), the other are _marginal_ detections. For more details, see [GWTC-1](https://www.gw-openscience.org/GWTC-1/). \n",
+    "\n",
+    "`find_datasets` also accepts a `detector` keyword to return only those datasets that include data for that detector:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1187008882.43\n"
+      "['GW170729', 'GW170809', 'GW170814', 'GW170817', 'GW170818']\n",
+      "['GW170817']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_datasets(type=\"event\", detector=\"V1\"))\n",
+    "print(find_datasets(type=\"event\", detector=\"G1\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`find_datasets` also accepts a `segment` keyword to narrow results based on GPS time:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['161202', '161217', '170208', '170219', '170405', '170412', '170423', '170616', '170630', '170705', '170720', 'GW170104', 'GW170608', 'GW170729', 'GW170809', 'GW170814', 'GW170817', 'GW170818', 'GW170823']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(find_datasets(type=\"event\", detector=\"L1\", segment=(1164556817, 1187733618)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using `gwosc.datasets.event_gps`, we can query for the GPS time of a specific event:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1187008882.4\n"
      ]
     }
    ],
@@ -102,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\">All of these times are returned in the GPS time system, which counts the number of seconds that have elapsed since the start of the GPS epoch at midnight (00:00) on January 6th 1980. LOSC provides a <a href=\"https://losc.ligo.org/gps/\">GPS time converter</a> you can use to translate into datetime, or you can use <a href=\"https://gwpy.github.io/docs/stable/time/\"><code>gwpy.time</code></a>.</div>"
+    "<div class=\"alert alert-info\">All of these times are returned in the GPS time system, which counts the number of seconds that have elapsed since the start of the GPS epoch at midnight (00:00) on January 6th 1980. GWOSC provides a <a href=\"https://www.gw-openscience.org/gps/\">GPS time converter</a> you can use to translate into datetime, or you can use <a href=\"https://gwpy.github.io/docs/stable/time/\"><code>gwpy.time</code></a>.</div>"
    ]
   },
   {
@@ -114,20 +194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(931035615, 971622015)\n"
+      "(1126051217, 1137254417)\n"
      ]
     }
    ],
    "source": [
     "from gwosc.datasets import run_segment\n",
-    "print(run_segment('S6'))"
+    "print(run_segment('O1'))"
    ]
   },
   {
@@ -136,8 +216,6 @@
    "source": [
     "## Querying for data files\n",
     "\n",
-    "### Events during O1\n",
-    "\n",
     "The `gwosc.locate` module provides a function to find the URLs of data files associated with a given dataset.\n",
     "\n",
     "For event datasets, one can get the list of URLs using only the event name:"
@@ -145,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'https://losc.ligo.org//s/events/GW150914/H-H1_LOSC_4_V2-1126259446-32.hdf5', u'https://losc.ligo.org//s/events/GW150914/L-L1_LOSC_4_V2-1126259446-32.hdf5', u'https://losc.ligo.org//s/events/GW150914/H-H1_LOSC_4_V2-1126257414-4096.hdf5', u'https://losc.ligo.org//s/events/GW150914/L-L1_LOSC_4_V2-1126257414-4096.hdf5']\n"
+      "['https://www.gw-osc.org/catalog/GWTC-1-confident/data/GW150914/H-H1_GWOSC_4KHZ_R1-1126259447-32.hdf5', 'https://www.gw-osc.org/catalog/GWTC-1-confident/data/GW150914/L-L1_GWOSC_4KHZ_R1-1126259447-32.hdf5', 'https://www.gw-osc.org/catalog/GWTC-1-confident/data/GW150914/H-H1_GWOSC_4KHZ_R1-1126257415-4096.hdf5', 'https://www.gw-osc.org/catalog/GWTC-1-confident/data/GW150914/L-L1_GWOSC_4KHZ_R1-1126257415-4096.hdf5']\n"
      ]
     }
    ],
@@ -171,105 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[u'https://losc.ligo.org//s/events/GW150914/L-L1_LOSC_4_V2-1126259446-32.hdf5']\n"
+      "['https://www.gw-osc.org/catalog/GWTC-1-confident/data/GW150914/L-L1_GWOSC_4KHZ_R1-1126259447-32.hdf5']\n"
      ]
     }
    ],
    "source": [
     "urls = get_event_urls('GW150914', duration=32, detector='L1')\n",
-    "print(urls)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Events during O2\n",
-    "\n",
-    "For events during O2 (and beyond), multiple different types of data were released for a given event, typically including the calibrated strain data, and a cleaned dataset with numerous well-defined instrumental noises removed.\n",
-    "\n",
-    "When querying for events during O2, an error will be raised if you don't specify which type of data you want, using the `tag` keyword:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "multiple LOSC URL tags discovered in dataset, please select one of: u'C00', u'CLN'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-ff3781debbe7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0murls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_event_urls\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'GW170817'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/duncan/git/odw-2018/venv/lib/python2.7/site-packages/gwosc/locate.pyc\u001b[0m in \u001b[0;36mget_event_urls\u001b[0;34m(event, format, sample_rate, **match)\u001b[0m\n\u001b[1;32m    111\u001b[0m         [u['url'] for u in lurls.sieve(meta['strain'], format=format,\n\u001b[1;32m    112\u001b[0m                                        sample_rate=sample_rate, **sieve_kw)],\n\u001b[0;32m--> 113\u001b[0;31m         **match)\n\u001b[0m",
-      "\u001b[0;32m/Users/duncan/git/odw-2018/venv/lib/python2.7/site-packages/gwosc/urls.pyc\u001b[0m in \u001b[0;36mmatch\u001b[0;34m(urls, start, end, tag, version)\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0mtags\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrepr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatched_tags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m         raise ValueError(\"multiple LOSC URL tags discovered in dataset, \"\n\u001b[0;32m--> 145\u001b[0;31m                          \"please select one of: {}\".format(tags))\n\u001b[0m\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m     \u001b[0;31m# extract highest version\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: multiple LOSC URL tags discovered in dataset, please select one of: u'C00', u'CLN'"
-     ]
-    }
-   ],
-   "source": [
-    "urls = get_event_urls('GW170817')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The error message tells you what tags are available, and you can refer to the [release page](https://losc.ligo.org/events/GW170817/) for documentation on what each tagged set contains.\n",
-    "\n",
-    "Now, if you specify the tag, you get back to the sitaution as for those events in O1:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'https://losc.ligo.org//s/events/GW170817/H-H1_LOSC_CLN_4_V1-1187007040-2048.hdf5', u'https://losc.ligo.org//s/events/GW170817/L-L1_LOSC_CLN_4_V1-1187007040-2048.hdf5', u'https://losc.ligo.org//s/events/GW170817/V-V1_LOSC_CLN_4_V1-1187007040-2048.hdf5']\n"
-     ]
-    }
-   ],
-   "source": [
-    "urls = get_event_urls('GW170817', tag='CLN')\n",
-    "print(urls)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We see that for this cleaned dataset, there's just a single file for each interferometer, so we could select on one using the `detector` keyword:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'https://losc.ligo.org//s/events/GW170817/V-V1_LOSC_CLN_4_V1-1187007040-2048.hdf5']\n"
-     ]
-    }
-   ],
-   "source": [
-    "urls = get_event_urls('GW170817', tag='CLN', detector='V1')\n",
     "print(urls)"
    ]
   },
@@ -283,27 +275,27 @@
     "\n",
     "- How many months did S6 last?\n",
     "- How many events were detected during O1?\n",
-    "- Which event releases include data for the Virgo detector?"
+    "- What file URL contains data for V1 4096 seconds around GW170817?"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
