--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -73,12 +73,13 @@
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "fr1pbfjzA6nY"
    },
    "outputs": [],
    "source": [
-    "from IPython.display import display, Math, Latex"
+    "from IPython.display import display, Math, Latex\n",
+    "from __future__ import print_function"
    ]
   },
   {
@@ -320,48 +321,6 @@
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
-    "id": "f5n1RKNMA6ox"
-   },
-   "source": [
-    "<span style=\"color:#B22222\"> <strong> ↳ </strong> </span> Now we plot the gravitational-wave sky localization using a dedicate package named  [ligo.skymap](https://pypi.org/project/ligo.skymap/)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "cellView": "both",
-    "colab": {},
-    "colab_type": "code",
-    "collapsed": true,
-    "id": "cXmPt7oRA6oy"
-   },
-   "outputs": [],
-   "source": [
-    "#@title\n",
-    "from matplotlib import pyplot as plt \n",
-    "\n",
-    "# from ligo.skymap.tool.ligo_skymap_plot import main\n",
-    "# main([gw170818_skymap, '--annotate', '--contour', '50', '90',])\n",
-    "# plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "V5_EjHJ8A6o6"
-   },
-   "source": [
-    "The plot shows the  the 50% and 90% credible regions. The value of these areas are reported at the top left corner. These contours were constructed ranking the pixels from most probable to least, and finally counted how many pixels summed to a given total probability.\n",
-    "\n",
-    "In the next section, we will identify the highest probability pixel in a gravitational-wave sky localization."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
     "id": "HCMpXwOoA6o8"
    },
    "source": [
@@ -476,7 +435,7 @@
    },
    "outputs": [],
    "source": [
-    "from astropy_healpix.healpy import pix2ang\n",
+    "from healpy import pix2ang\n",
     "\n",
     "hdulist[1].header['NSIDE'] # get the healpix resolution - nside - from the header\n",
     "\n",
@@ -517,7 +476,7 @@
    },
    "source": [
     "\n",
-    "####  ↳ Loading the skymap from the [GWOS](https://www.gw-openscience.org/catalog/) in Aladin\n",
+    "####  ↳ Loading the skymap from the [GWOSC](https://www.gw-openscience.org/catalog/) in Aladin\n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=1DlWUxzqgSZpYAckaq58ZGMXHlJAaEwc4) <em>Copy and Paste the link in the Command Bar </em>\n",
     "\n",
     "####  ↳ Reading the header\n",
@@ -534,6 +493,7 @@
     "####  ↳ Creating the 90% confidence level \n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=1aH-YvEyN9xeD9kGZkQ7ASXNcDK-33KUt) <em>Coverage → Generate a MOC based on... → The current probability skymap → MOC generation window </em>\n",
     "\n",
+    "The plot shows the 90% credible regions. These contours were constructed ranking the pixels from most probable to least, and finally counted how many pixels summed to a given total probability. We can do a similar plot using a dedicated package named  [ligo.skymap](https://pypi.org/project/ligo.skymap/).\n",
     "\n",
     "####  ↳ Setting Drawing method\n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=1Xy6S-y9SRB_TIKFYcecUrXtqdAZ96YcI) <em> Aladin stack → Select the plane → right-click → Properties...  → Properties window   </em>\n",
