reshuffling several instructions

--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -194,23 +194,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "-tblmU3kA6nj"
-   },
-   "source": [
-    "###  Python packages\n",
-    "\n",
-    "We will need [healpy](https://healpy.readthedocs.org/en/latest/) [astropy](http://www.astropy.org/), [astropy-healpix](https://astropy-healpix.readthedocs.io/en/latest/installation.html), [ligo.skymap](https://pypi.org/project/ligo.skymap/), [numpy](http://www.numpy.org/),  [matplotlib](https://matplotlib.org/).\n",
-    "\n",
-    "\n",
-    "### Aladin Sky Atlas\n",
-    "\n",
-    "Aladin is an interactive sky atlas allowing the user to visualize digitized astronomical images or full surveys, superimpose entries from astronomical catalogues or databases, and interactively access related data and information from the *Simbad* database, the *VizieR* service and other archives for all known astronomical objects in the field. Installation instruction are provided [here](<https://aladin.u-strasbg.fr/java/nph-aladin.pl?frame=downloading)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -396,7 +379,7 @@
     "id": "PAO4ogE1A6pO"
    },
    "source": [
-    "**Alternatively, you can use [astropy-healpix](https://astropy-healpix.readthedocs.io/en/latest/installation.html) to perform the same tasks.** Recommendation for the Windows OS users."
+    "Alternatively, you can use [astropy-healpix](https://astropy-healpix.readthedocs.io/en/latest/installation.html) to perform the same tasks. We recommand this alternative solution for the Windows OS users."
    ]
   },
   {
@@ -466,6 +449,20 @@
    "source": [
     "On August 17, 2017 astronomers around the world were alerted to gravitational waves observed by the Advanced LIGO and Advanced Virgo detectors. This gravitational wave event, now known as GW170817, appeared to be the result of the merger of two neutron stars (BNS). Less than two seconds after the GW170817 signal, NASA's [Fermi](https://fermi.gsfc.nasa.gov/) satellite observed a gamma-ray burst, now known as GRB170817A, and within minutes of these initial detections telescopes around the world began an extensive observing campaign. The [Swope telescope](http://obs.carnegiescience.edu/swope) in Chile was the first to report a bright optical source (SSS17a/AT2017gfo) in the galaxy NGC 4993 and several other teams independently detected the same transient over the next minutes and hours.  \n",
     "GW170817 marks a new era of multi-messenger astronomy, where the same event is observed by both gravitational waves and electromagnetic waves. [The Dawn of Multi-Messenger Astrophysics: Observations of a Binary Neutron Star Merger](http://ligo.org/science/Publication-GW170817MMA/). \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "-tblmU3kA6nj"
+   },
+   "source": [
+    "### Aladin Sky Atlas\n",
+    "\n",
+    "Aladin is an interactive sky atlas allowing the user to visualize digitized astronomical images or full surveys, superimpose entries from astronomical catalogues or databases, and interactively access related data and information from the *Simbad* database, the *VizieR* service and other archives for all known astronomical objects in the field.\n",
+    "\n",
+    "**You now must install the Aladin GUI following those [instructions](<https://aladin.u-strasbg.fr/java/nph-aladin.pl?frame=downloading>).**"
    ]
   },
   {
