Add more about installation instructions

--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -462,7 +462,11 @@
     "\n",
     "Aladin is an interactive sky atlas allowing the user to visualize digitized astronomical images or full surveys, superimpose entries from astronomical catalogues or databases, and interactively access related data and information from the *Simbad* database, the *VizieR* service and other archives for all known astronomical objects in the field.\n",
     "\n",
-    "**You now must install the Aladin GUI following those [instructions](<https://aladin.u-strasbg.fr/java/nph-aladin.pl?frame=downloading>).**"
+    "**You now must install the Aladin GUI following those [instructions](<https://aladin.u-strasbg.fr/java/nph-aladin.pl?frame=downloading>).**\n",
+    "\n",
+    "If you are a Linux user: download the Aladin tarball, and launch the Aladin GUI with the following command line: java -jar -Xmx1G Aladin.jar\n",
+    "\n",
+    "If you are a Mac OS user: download the Aladin dmg, and launch (preferably) the Aladin GUI with the following command line: java -jar -Xmx1G /Applications/Aladin.app/Contents/Ressources/Java/Aladin.jar"
    ]
   },
   {
@@ -490,12 +494,14 @@
     "####  ↳ Creating the 90% confidence level \n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=1aH-YvEyN9xeD9kGZkQ7ASXNcDK-33KUt) <em>Coverage → Generate a MOC based on... → The current probability skymap → MOC generation window </em>\n",
     "\n",
-    "The plot shows the 90% credible regions. These contours were constructed ranking the pixels from most probable to least, and finally counted how many pixels summed to a given total probability. We can do a similar plot using a dedicated package named  [ligo.skymap](https://pypi.org/project/ligo.skymap/).\n",
+    "The plot shows the 90% credible regions. These contours were constructed ranking the pixels from most probable to least, and finally counted how many pixels summed to a given total probability. Place your mouse arrow on the MOC plane (bottom right). You can then read in the description on the top right the solid angle ('Space') associated with the skymap. How many square degrees to you read?\n",
+    "\n",
+    "We can do a similar plot using a dedicated package named  [ligo.skymap](https://pypi.org/project/ligo.skymap/).\n",
     "\n",
     "####  ↳ Setting Drawing method\n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=1Xy6S-y9SRB_TIKFYcecUrXtqdAZ96YcI) <em> Aladin stack → Select the plane → right-click → Properties...  → Properties window   </em>\n",
     "\n",
-    "####  ↳ Querying the GLADE catalog (v2.3)\n",
+    "####  ↳ Querying the GLADE galaxy catalog (v2.3) and select the galaxies compatible with the direction of the source\n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=11rCSzdUd4AP49T26ujOyQfZ0CQ4e9KP1) <em> Aladin data collections tree → Select → click on the catalog item → in the popup menu check  → by region&MOC   </em>\n",
     "\n",
     "####  ↳ Filtering the galaxies  according with the distance information\n",
@@ -504,6 +510,15 @@
     "####  ↳ Search for the host galaxy NGC 4993\n",
     "* [Using Aladin GUI](https://drive.google.com/open?id=1cSeL3HJBAEXAqBOGSdb5zTAAZPhpVPpM) <em>Type in the Command bar: NGC 4993    </em>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
