add matplotlib config line

--- a/Day_2/Tuto_2.4_Parameter_estimation_for_compact_object_mergers.ipynb
+++ b/Day_2/Tuto_2.4_Parameter_estimation_for_compact_object_mergers.ipynb
@@ -566,6 +566,7 @@
     }
    ],
    "source": [
+    "%matplotlib inline\n",
     "plt.hist(result.posterior['chirp_mass'],bins=20,histtype='step',density=True,label='Full run')\n",
     "plt.hist(result_mc.posterior['chirp_mass'],bins=20,histtype='step',density=True,label='Chirp mass only')\n",
     "plt.ylabel('Probability density')\n",
