--- a/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
+++ b/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
@@ -4,75 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to GWpy\n",
+    "<img style=\"float: left;padding: 1.3em\" src=\"https://indico.in2p3.fr/event/18313/logo-786578160.png\">  \n",
+    "\n",
+    "#  Gravitational Wave Open Data Workshop #2\n",
+    "\n",
+    "\n",
+    "#### Tutorial 1.2: Introduction to GWpy\n",
     "\n",
     "This tutorial will briefly describe GWpy, a python package for gravitational astrophysics, and walk-through how you can use this to speed up access to, and processing of, GWOSC data.\n",
+    "    \n",
+    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb)\n",
     "\n",
-    "<div class=\"alert alert-info\">This notebook, and others in this series, were generated using python 3.7, but should work on python 2.7, 3.6, or 3.7.</div>"
+    "<div class=\"alert alert-info\">This notebook were generated using python 3.7, but should work on python 2.7, 3.6, or 3.7.</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Installing GWpy\n",
-    "First, we need to install GWpy.\n",
+    "##  Installation  (execute only if running on a cloud platform or if you haven't done the installation already!)\n",
     "\n",
-    "To do that in our notebook we use [`pip`](https://docs.python.org/3.6/installing/), but **it is recommended** to use [conda](https://docs.ligo.org/lscsoft/conda/) on your own machine.\n",
-    "This usage might look a little different than normal, simply because we want to do this directly from the notebook."
+    "Note: we use [`pip`](https://docs.python.org/3.6/installing/), but **it is recommended** to use [conda](https://docs.ligo.org/lscsoft/conda/) on your own machine, as explained in the [installation instructions](https://github.com/gw-odw/odw-2019/blob/master/setup.md). This usage might look a little different than normal, simply because we want to do this directly from the notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: gwpy==0.14.2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (0.14.2)\n",
-      "Requirement already satisfied: python-dateutil in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (2.8.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (1.12.0)\n",
-      "Requirement already satisfied: tqdm>=4.10.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (4.31.1)\n",
-      "Requirement already satisfied: ligo-segments>=1.0.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (1.2.0)\n",
-      "Requirement already satisfied: astropy>=1.1.1; python_version >= \"3\" in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (3.1.2)\n",
-      "Requirement already satisfied: matplotlib!=2.1.0,!=2.1.1,>=1.2.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (3.0.3)\n",
-      "Requirement already satisfied: scipy>=0.12.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (1.2.1)\n",
-      "Requirement already satisfied: gwosc>=0.4.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (0.4.3)\n",
-      "Requirement already satisfied: numpy>=1.7.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (1.15.2)\n",
-      "Requirement already satisfied: ligotimegps>=1.2.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (2.0.0)\n",
-      "Requirement already satisfied: dqsegdb2 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (1.0.1)\n",
-      "Requirement already satisfied: h5py>=1.3 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (2.9.0)\n",
-      "Requirement already satisfied: gwdatafind in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwpy==0.14.2) (1.0.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy==0.14.2) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy==0.14.2) (1.0.1)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy==0.14.2) (2.3.1)\n",
-      "Requirement already satisfied: pyOpenSSL in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from gwdatafind->gwpy==0.14.2) (19.0.0)\n",
-      "Requirement already satisfied: setuptools in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from kiwisolver>=1.0.1->matplotlib!=2.1.0,!=2.1.1,>=1.2.0->gwpy==0.14.2) (40.8.0)\n",
-      "Requirement already satisfied: cryptography>=2.3 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from pyOpenSSL->gwdatafind->gwpy==0.14.2) (2.5)\n",
-      "Requirement already satisfied: asn1crypto>=0.21.0 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from cryptography>=2.3->pyOpenSSL->gwdatafind->gwpy==0.14.2) (0.24.0)\n",
-      "Requirement already satisfied: cffi!=1.11.3,>=1.8 in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from cryptography>=2.3->pyOpenSSL->gwdatafind->gwpy==0.14.2) (1.12.2)\n",
-      "Requirement already satisfied: pycparser in /Users/duncan/opt/miniconda3/envs/py37/lib/python3.7/site-packages (from cffi!=1.11.3,>=1.8->cryptography>=2.3->pyOpenSSL->gwdatafind->gwpy==0.14.2) (2.19)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "!{sys.executable} -m pip install \"gwpy==0.14.2\""
+    "! wget --output-document=requirements.txt 'https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt'\n",
+    "! pip install -r ./requirements.txt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To verify that this worked, we can try to `import gwpy` and inspect the path and version number:"
+    "**Important:** With Google Colab, you may need to restart the runtime after running the cell above."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -124,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -150,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -184,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -238,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -281,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -319,7 +308,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -359,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.signal import get_window\n",
@@ -377,7 +370,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -418,7 +413,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -442,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -482,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -519,7 +520,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -575,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
