--- a/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
+++ b/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
