Add instructions to get data from a local file

--- a/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
+++ b/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
@@ -99,9 +99,8 @@
    "source": [
     "### Finding open data\n",
     "\n",
-    "We have seen already that the `gwosc` module can be used to query for what data are available on LOSC.\n",
-    "The next thing to do is to actually read some open data.\n",
-    "Let's try to get some for GW150914, the first direct detection of an astrophysical gravitational-wave signal.\n",
+    "We have seen already that the `gwosc` module can be used to query for what data are available on GWOSC.\n",
+    "The next thing to do is to actually read some open data. Let's try to get some for GW150914, the first direct detection of an astrophysical gravitational-wave signal.\n",
     "\n",
     "We can use the [`TimeSeries.fetch_open_data`](https://gwpy.github.io/docs/stable/api/gwpy.timeseries.TimeSeries.html#gwpy.timeseries.TimeSeries.fetch_open_data) method to download data directly from https://www.gw-openscience.org, but we need to know the GPS times.\n",
     "We can query for the GPS time of an event as follows:"
@@ -208,6 +207,10 @@
     "The `verbose=True` flag lets us see that GWpy has discovered two files that provides the data for the given interval, downloaded them, and loaded the data.\n",
     "The files are not stored permanently, so next time you do the same call, it will be downloaded again, however, if you know you might repeat the same call many times, you can use `cache=True` to store the file on your computer.\n",
     "\n",
+    "Notes: \n",
+    "\n",
+    "* To read data from a local file instead of from the GWOSC server, we can use [`TimeSeries.read`(https://gwpy.github.io/docs/stable/api/gwpy.timeseries.TimeSeries.html#gwpy.timeseries.TimeSeries.read) method.\n",
+    "\n",
     "We have now downloaded real LIGO data for GW170817! These are the actual data used in the analysis that discovered the first binary neutron star merger."
    ]
   },
@@ -250,6 +253,16 @@
    "source": [
     "%matplotlib inline\n",
     "plot = data.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes: There are alternatives ways to access the GWOSC data. \n",
+    "\n",
+    "* [`readligo`](https://losc.ligo.org/s/sample_code/readligo.py) is a light-weight Python module that returns the time series into a Numpy array.\n",
+    "* The [PyCBC](http://github.com/ligo-cbc/pycbc) package has the `pycbc.frame.query_and_read_frame` and `pycbc.frame.read_frame` methods. We use [PyCBC](http://github.com/ligo-cbc/pycbc) in Tutorial 2.1, 2.2 and 2.3. "
    ]
   },
   {
