--- a/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
+++ b/Day_1/Tuto 1.2 Open Data access with GWpy.ipynb
@@ -209,7 +209,7 @@
     "\n",
     "Notes: \n",
     "\n",
-    "* To read data from a local file instead of from the GWOSC server, we can use [`TimeSeries.read`(https://gwpy.github.io/docs/stable/api/gwpy.timeseries.TimeSeries.html#gwpy.timeseries.TimeSeries.read) method.\n",
+    "* To read data from a local file instead of from the GWOSC server, we can use [`TimeSeries.read`](https://gwpy.github.io/docs/stable/api/gwpy.timeseries.TimeSeries.html#gwpy.timeseries.TimeSeries.read) method.\n",
     "\n",
     "We have now downloaded real LIGO data for GW170817! These are the actual data used in the analysis that discovered the first binary neutron star merger."
    ]
