--- a/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
+++ b/Day_2/Tuto 2.6 Working_with_gravitational_wave_skymaps.ipynb
@@ -359,7 +359,7 @@
     "dec = np.rad2deg(0.5 * np.pi - theta)\n",
     "\n",
     "ra = round(ra,5); dec = round(dec,5);\n",
-    "print(\"The sky coordinates of the highest probability pixel are:\", \"ra =\",ra,\"dec =\",dec, )"
+    "print(\"The sky coordinates of the highest probability pixel are:\", \"ra =\",ra,\"dec =\",dec, \"(ICRS coordinates in degrees)" )"
    ]
   },
   {
