fix link to Colab

--- a/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb
+++ b/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The data used in these tutorials will be downloaded from the public DCC page [LIGO-P1800370](https://dcc.ligo.org/LIGO-P1800370/public).\n",
     "\n",
-    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/Day_2/Tuto%202.6%20Working_with_gravitational_wave_skymaps.ipynb)"
+    "[Click this link to view this tutorial in Google Colaboratory](https://colab.research.google.com/github/gw-odw/odw-2019/blob/master/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb)"
    ]
   },
   {
