--- a/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb
+++ b/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb
@@ -22,6 +22,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Installation (execute only if running on a cloud platform!)¶"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "! wget --output-document=requirements.txt 'https://raw.githubusercontent.com/gw-odw/odw-2019/master/requirements.txt'\n",
+    "! pip install -r ./requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Important**: With Google Colab, you may need to restart the runtime after running the cell above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Initialization"
    ]
   },
