fix cell 10 -- incompat with default Pandas version on Colab

--- a/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb
+++ b/Day_2/Tuto_2.5_Parameter_estimation_for_compact_object_mergers.ipynb
@@ -1289,16 +1289,16 @@
     }
    ],
    "source": [
-    "corner.corner(samples.to_numpy(),labels=['costhetajn',\n",
-    "                                         'distance [Mpc]',\n",
-    "                                         'ra',\n",
-    "                                         'dec',\n",
-    "                                         'mass1 [Msun]',\n",
-    "                                         'mass2 [Msun]',\n",
-    "                                         'spin1',\n",
-    "                                         'spin2',\n",
-    "                                         'costilt1',\n",
-    "                                         'costilt2']);"
+    "corner.corner(samples,labels=['costhetajn',\n",
+    "                                'distance [Mpc]',\n",
+    "                                'ra',\n",
+    "                                'dec',\n",
+    "                                'mass1 [Msun]',\n",
+    "                                'mass2 [Msun]',\n",
+    "                                'spin1',\n",
+    "                                'spin2',\n",
+    "                                'costilt1',\n",
+    "                                'costilt2']);"
    ]
   },
   {
